# ai-agent-generator-mcp

./: .gitignore  =0.1.23  ARCHITECTURE.md  README.md  SMITHERY.md  demo_email_agent_chat.html  final_email_agent_chat.html  pyproject.toml  requirements.txt  smithery.yaml  test_agent_creation.py  test_email_agent.py  test_mcp_server.py
src/: __init__.py  server.py
src/ai_agent_generator_mcp/: __init__.py  server.py
src/components/: __init__.py  ai_components.py  data_tools.py  examples.py  integrations.py  workflow_templates.py  workflow_tools.py
src/tools/: __init__.py  component_manager.py  deployer.py  enhanced_agent_manager.py  workflow_manager.py
src/utils/: description_analyzer.py  helpers.py  smart_context.py
