[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-generator-mcp"
version = "1.0.0"
description = "MCP Server that enables AI to create other AI agents through natural language"
authors = [{name = "AI Agent Generator MCP", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/arturwyroslak/ai-agent-generator-mcp"
Repository = "https://github.com/arturwyroslak/ai-agent-generator-mcp"

[project.scripts]
ai-agent-generator-mcp = "src.server:main"