[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "ai_agent_generator_mcp"
version = "1.0.0"
description = "MCP Server that enables AI to create other AI agents through natural language"
authors = [{name = "AI Agent Generator MCP", email = "contact@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.0",
    "smithery>=0.1.23",
]

[project.urls]
Homepage = "https://github.com/arturwyroslak/ai-agent-generator-mcp"
Repository = "https://github.com/arturwyroslak/ai-agent-generator-mcp"

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

# Points to your server function
[tool.smithery]
server = "ai_agent_generator_mcp.server:create_server"